Version 1.0.2
-----------------------------------------------------------------------
30 January 2008
+ Clipboard won't allow clipping of items without a title and content.

Version 1.0.1
--------------------------------------------------------------------------
10 October 2007
+ Added different window titles.
+ Increased popup width.

Version 1.0.0
--------------------------------------------------------------------------
4 April 2007
+ Updated language functions.

Version 0.0.3
---------------------------------------------------------------------------
19 February 2007
+ Reduced translate calls.

15 February 2007
+ Added translate functions.