@@ -1,0 +1,1 @@
+<a style="cursor : pointer" onclick="drop_clip('{id}');">{link}</a>
