@@ -1,9 +1,5 @@
-<html>
-<title>{TITLE}</title>
-{STYLE}
-<body>
-{DIRECTIONS}
-{CONTENT}
-<div class="align-center">{BUTTON}</div>
-</body>
-</html>
+<div id="clipboard-view">
+   <ul id="view-pick"><li>{VIEW_LINK}</li><li>{SOURCE_LINK}</li></ul>
+   <div id="clip">{CONTENT}</div>
+   <div style="margin-top : 2em">{BUTTON}</div>
+</div>
