@@ -1,3 +1,7 @@
+5 September 2008
++ Trying new format to clipboard. Still need to add tab for smarttags.
++ Updated: javascript/*, templates/clipboard.tpl, templates/style.css
+
 Version 1.0.2
 -----------------------------------------------------------------------
 30 January 2008
